# taskiq-aio-sqs

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: publish.yml  test.yml
taskiq_aio_sqs/: __init__.py  constants.py  exceptions.py  s3_backend.py  sqs_broker.py
tests/: conftest.py  test_backend.py  test_broker.py  test_kick.py  test_listen.py
tests/localstack/: init-aws.sh
